- Vehicles are now loaded from XML-files.

--- a/HexTbs/HexTbs.csproj
+++ b/HexTbs/HexTbs.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Battle\Unit\Weapons\BWeapon.cs" />
     <Compile Include="Frame.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="ModelEntities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
